[package]
name = "ipfs_bc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = "0.17.0"
serde = "1.0.152"
ipfs-api-backend-hyper = "0.6"
futures = "0.3"
tokio = { version = "1", features = ["full"] }